Correct alignment of logo in nav

--- a/css/styles.css
+++ b/css/styles.css
@@ -248,7 +248,6 @@ a:hover {
   }
   .sirota-logo {
     margin-left: 0;
-    width: 300px;
   }
   h1.labname {
     font-size: 40px;
